[package]
name = "advent_of_code_2017"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
arrayvec = "0.7"
bitvec = "1.0"
framework = { path = "./framework", package = "advent_of_code_framework" }
itertools = "0.13"
num = "0.4"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
criterion = "0.5"
criterion-macro = "0.4"

[features]
criterion = []

[workspace]
members = [
    "framework"
]
